--- a/index.html
+++ b/index.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Mi Pagina </title>
 </head>
-<body  style="background-color: rgb(75, 136, 156);"></body>
-     <B> <h1> Que mas profe </h1> </B>
-     <I> <p> nos fuimos pal mundial </p> </I>
 
- <img src="mundial.jpg" style="width: 1000px;">
+<body style="background-color: rgb(175, 157, 173);"></body>
+<B>
+    <h1> Que mas profe </h1>
+</B>
+<I>
+    <p> NOS FUIMOS PAL MUNDIAL </p>
+</I>
+
+<img src="mundial.jpg" style="width: 430px;"> <style>
+    img {
+        border: 5px solid rgb(0, 0, 0);
+
+    }
+    
+
+
+</style>
+
+
+
+<p>
+    <center> La historia del Mundial de Fútbol comienza con la primera edición en Uruguay en 1930, tras la iniciativa de
+        la FIFA
+        de crear un campeonato propio. El torneo, organizado cada cuatro años (con interrupciones por la Segunda Guerra
+        Mundial), ha crecido hasta convertirse en un evento deportivo de gran magnitud. La Copa Jules Rimet fue el
+        trofeo
+        original hasta 1970, y desde 1974 se utiliza el trofeo actual de la Copa Mundial de la FIFA. Brasil es el país
+        con
+        más títulos, con cinco victorias.
+</p>
+</center>
+
+<h2> Orígenes y los primeros años</h2>
+
+<p>
+    Decisión de la FIFA: En 1928, la FIFA decidió crear su propio campeonato mundial, separándose de los Juegos
+    Olímpicos. <br>
+    <br>
+    Primera edición: El primer torneo se celebró en Uruguay en 1930. Solo 12 equipos participaron debido a la crisis
+    económica y las dificultades de viaje. <br>
+    <br>
+    Primer campeón: Uruguay se coronó campeón al vencer a Argentina en la final.
+</p>
+
+
+<video src="World Cup 2022 __ Qatar __ Best Moments __ Arhbo __ ᴴᴰ.mp4" style="width: 90%;"></video>
+
 
 
 </body>
+
 </html
