--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
     <p> NOS FUIMOS PAL MUNDIAL </p>
 </I>
 
-<img src="mundial.jpg" style="width: 430px;"> <style>
+<img src="mundial.jpg" style="width: 430px;">
+<style>
     img {
         border: 5px solid rgb(0, 0, 0);
 
     }
-    
-
-
 </style>
 
 
@@ -52,7 +50,10 @@
 </p>
 
 
-<video src="World Cup 2022 __ Qatar __ Best Moments __ Arhbo __ ᴴᴰ.mp4" style="width: 90%;"></video>
+<video width="50%" controls>
+    <source src="World_Cup_2022_Qatar_Best_Moments_Arhbo_HD.mp4" type="video/mp4">
+</video>
+
 
 
 
